# vrpn-sim-mavlink

./: .gitignore  README.md
Receiver/: CMakeLists.txt  README.md  requirements.txt  vrpn_to_mavlink_bridge.py
Receiver/include/receiver/: MavlinkSender.h  TrackerClient.h
Receiver/src/: MavlinkSender.cpp  TrackerClient.cpp  main.cpp
Sender/: CMakeLists.txt  README.md
Sender/cmake/: FindVRPN.cmake
Sender/include/vrpn_sim/: FakeTrackerServer.h  ProgramOptions.h
Sender/src/: FakeTrackerServer.cpp  ProgramOptions.cpp  fake_vrpn_uav_server.cpp
tests/: test_vrpn_loopback.sh
